--- a/theme/style.css
+++ b/theme/style.css
@@ -1,4 +1,7 @@
 html, body {
     color: gray;
-    background-color: red;
+    background-color: blue;
+    margin: 3px;
+    border: 5px;
+    font-size: 150%;
 }
